# OpenGL-Playground

./: CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  shapes.cpp  shapes.h  utils.h
scenes/: ManyBoxesScene.h  MaterialLightMapsScene.h  MultipleLightsScene.h  SimpleBoxScene.h  SimpleLightningScene.h
shaders/: basic.vert  basic_texture.vert  light_source.frag  material.vert  solid_color_box.frag  textured_box.frag  textured_box_directional_light.frag  textured_box_point_light.frag  textured_box_spotlight.frag  two_textures.frag
